--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
                 </div>
                 <div class="cv-item">
                     <div class="cv-item-content">
-                        <h3>32 ans d'expérience dans les Armées</h3>
+                        <h3>33 années d'expériences dans les Armées</h3>
                         <p><strong>Expertise en logistique et maintenance</strong></p>
                         <p>Évaluations excellentes, gestion de projets complexes, formation des équipes.</p>
                     </div>
@@ -430,8 +430,9 @@
                 <div class="cv-item">
                     <div class="cv-item-content">
                         <h3>Formation et Diplômes</h3>
-                        <p><strong>Ingénierie Logistique et Maintenance</strong></p>
-                        <p>Certifications en gestion de projet et optimisation des processus.</p>
+			<p><strong>Master Instrumentations, Essais, Mesures, contrôles et Management des Systèmes (ex DEA)</strong></p>
+                        <p><strong>Certifié en Ingénierie Logistique et Maintenance</strong></p>
+                        <p>Certifié en gestion de projets et optimisation des processus.</p>
                         <p>Agréé par la DGA en soutien logistique intégré (SLI).</p>
                     </div>
                 </div>
