--- a/index.html
+++ b/index.html
@@ -430,10 +430,12 @@
                 <div class="cv-item">
                     <div class="cv-item-content">
                         <h3>Formation et Diplômes</h3>
-			<p><strong>Master Instrumentations, Essais, Mesures, contrôles et Management des Systèmes (ex DEA)</strong></p>
-                        <p><strong>Certifié en Ingénierie Logistique et Maintenance</strong></p>
+			<p><strong>Master Instrumentations, Essais, Mesures, Contrôles et Management des Systèmes avec Mention Très Bien.</strong></p>
+                        <p>Certifié en Ingénierie Logistique et Maintenance.</p>
                         <p>Certifié en gestion de projets et optimisation des processus.</p>
                         <p>Agréé par la DGA en soutien logistique intégré (SLI).</p>
+			<p>Référent en métrologie (mise en place des méthodes d'optimisation notamment OPPERET).</p>
+
                     </div>
                 </div>
             </div>
