--- a/index.html
+++ b/index.html
@@ -376,7 +376,8 @@
                     <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="Formation">
                     <div class="service-card-content">
                         <h3>Formation et Conseil</h3>
-                        <p>Formations sur mesure en logistique, maintenance et gestion de projet pour vos équipes.</p>
+                        <p>Formations sur mesure en soutien maintenance logistique intégré et en gestion de projet pour vos équipes.</p>
+			<p>Interventions dans les universités ou en écoles supérieures sur la maintenance industrielle optimisée</p>
                     </div>
                 </div>
                 <div class="service-card">
